--- a/css/main.scss
+++ b/css/main.scss
@@ -10,7 +10,8 @@
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
-        "header"
+        "header",
+        "main"
 //        "layout",
 //        "syntax-highlighting"
 ;
