Last commit before change

--- a/_includes/header_secondary_nav.html
+++ b/_includes/header_secondary_nav.html
@@ -1,3 +1,5 @@
+{% if page.categories contains 'main index' %}
+{% else %}
 <nav class="secondary-nav">
   {% if page.categories contains 'about' %}
     {% include header_nav_about.html %}
@@ -8,7 +10,5 @@
   {% if page.categories contains 'volunteering' %}
     {% include header_nav_volunteering.html %}
   {% endif %}
-  {% if page.categories contains 'projects' %}
-    {% include header_nav_projects.html %}
-  {% endif %}
 </nav>
+{% endif %}
