--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
   <body>
 
     {% include header.html %}
-    <main>
+    <main id="{% if page.categories contains 'main index' %}main-index{% endif %}">
       {{ content }}
     </main>
 
