--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,6 +1,14 @@
+$main-background-color: #fff;
+$main-nav-width: 20%;
+$secondary-nav-width: 20%;
+
 @media (min-width: 768px) {
   main {
-    margin-left: $main-nav-width + $secondary-nav-width ;
+    margin-left: $main-nav-width + $secondary-nav-width;
+
+    &#main-index {
+      margin-left: $main-nav-width;
+    }
   }
 }
 
@@ -14,4 +22,10 @@ section {
 
 main {
   font-size: 12pt;
+}
+
+#main-index {
+  header h1 {
+    font-size: 63px;
+  }
 }
