--- a/css/main.scss
+++ b/css/main.scss
@@ -10,8 +10,8 @@
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
-        "header",
-        "main"
+        "main",
+        "header"
 //        "layout",
 //        "syntax-highlighting"
 ;
