--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 
   {% include header.html %}
   <main class="container">
-    <div class="col-xs-hidden" id="side-nav">
+    <div class="hidden-xs" id="side-nav">
       {% include side_nav.html%}
     </div>
     <div id="main-content">
