--- a/_includes/items.html
+++ b/_includes/items.html
@@ -1,5 +1,6 @@
 {% for item in items %}
-  <div id="{{item.id}}" class="panel panel-primary">
+  <section id="{{item.id}}" class="panel panel-primary">
+
     <header class="panel-heading">
       <span class="pull-right">
         <button class="btn btn-primary btn-sm" data-toggle="collapse" aria-expanded="true" data-target="#{{item.id}}-collapse" aria-controls="#{{item.id}}-collapse">
@@ -11,10 +12,15 @@
       </span>
       <h2><a href="{{item.url}}">{{item.name}}</a></h2>
     </header>
-    <div id="{{item.id}}-collapse" class="panel-collapse collapse in" role="tabpanel">
+
+    <section id="{{item.id}}-collapse" class="panel-collapse collapse in" role="tabpanel">
       <div class="panel-body">
         {{item.description}}
       </div>
-    </div>
-  </div>
+    </section>
+
+    <footer class="panel-footer">
+    </footer>
+
+  </section>
 {% endfor %}
