--- a/_includes/items.html
+++ b/_includes/items.html
@@ -14,9 +14,13 @@
         {% if item.icon %}
           <img src="{{site.baseurl}}{{item.icon}}" alt="{{item.name}} logo" class="favicon"/>
         {% endif %}
-        <a href="{{item.url}}">
-        {{item.name}}
-        </a>
+        {% if item.url %}
+          <a href="{{item.url}}">
+            {{ item.name }}
+          </a>
+        {% else %}
+          {{ item.name }}
+        {% endif %}
       </h2>
     </header>
 
