Item minor improvements
- Changed minimize button to a link, so it does not get focused on click.
- Added a max-height to panel body, so if contents are longer than max,
a scroll bar is added to the "window".
- Added tech websites to techcorridor.io (as comments) to not forget to
add them.

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -43,16 +43,22 @@ header.panel-heading h2 {
   }
 }
 
-.glyphicon.glyphicon-minus {
-  top: 10px;
-}
-
 section {
   text-indent: 0;
 }
 
-.panel-body {
-  section + section {
-    text-indent: 1.5em;
+.item {
+
+  .glyphicon.glyphicon-minus {
+    top: 10px;
+  }
+
+  .panel-body {
+    max-height: 500px;
+    overflow-y: auto;
+
+    section + section {
+      text-indent: 1.5em;
+    }
   }
 }
