--- a/_includes/items.html
+++ b/_includes/items.html
@@ -1,14 +1,14 @@
 {% for item in items %}
-  <section id="{{item.id}}" class="panel panel-primary">
+  <section id="{{item.id}}" class="panel panel-primary item">
 
     <header class="panel-heading">
       <span class="pull-right">
-        <button class="btn btn-primary btn-sm" data-toggle="collapse" aria-expanded="true" data-target="#{{item.id}}-collapse" aria-controls="#{{item.id}}-collapse">
+        <a class="btn btn-primary btn-sm" data-toggle="collapse" aria-expanded="true" data-target="#{{item.id}}-collapse" aria-controls="#{{item.id}}-collapse">
           <span class="glyphicon glyphicon-minus"></span>
-        </button>
-        <button class="btn btn-danger btn-sm disabled">
+        </a>
+        <a class="btn btn-danger btn-sm disabled">
           <span class="glyphicon glyphicon-remove"></span>
-        </button>
+        </a>
       </span>
       <h2>
         {% if item.icon %}
