--- a/_includes/header_main.html
+++ b/_includes/header_main.html
@@ -1,6 +1,6 @@
 <nav class="main-nav">
   <div class="branding">
-    <a href="{{site.baseurl}}/">andy_onuki</a>:~/<!--
+    <a href="{{site.baseurl}}/">andre_onuki</a>:~/<!--
     {% for p in site.data.pages %}
       {% if page.category == p %}
         --><a href="{{site.baseurl}}/{{p}}">{{p}}</a><!--
