Adds the blog Syntax highlighting for code first 2 blog posts Categories pages

--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -2,7 +2,7 @@ $nav-branding-height: 50px;
 $secondary-nav-color: #333;
 $secondary-nav-padding-left: 15px;
 
-@keyframes blinking-cursor { /* CSS3 */
+@keyframes blinking-cursor {
   50%  { opacity: 0.0; }
 }
 
