--- a/css/main.scss
+++ b/css/main.scss
@@ -11,7 +11,10 @@
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
         "main",
-        "header"
+        "header",
+        "code",
+        "posts",
+        "blog"
 //        "layout",
 //        "syntax-highlighting"
 ;
