--- a/_includes/blog_side_nav.html
+++ b/_includes/blog_side_nav.html
@@ -3,7 +3,7 @@
   <ul class="nav nav-tabs">
     {% for category in site.categories %}
       <li>
-        <a href="/category/{{ category[0] }}#VTNC">{{ category[0] | capitalize}} ({{ category[1].size }})</a>
+        <a href="/category/{{ category[0] }}">{{ category[0] | capitalize}} ({{ category[1].size }})</a>
       </li>
     {% endfor %}
   </ul>
